// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureActiveDirectoryCommandBar matches snapshot when token is not present 1`] = `
<CommandBarV9
  items={
    [
      {
        "ariaLabel": "authentication.azureActiveDirectory.command.login",
        "icon": <PersonRegular />,
        "key": "signin",
        "onClick": [Function],
        "text": "authentication.azureActiveDirectory.command.login",
      },
      {
        "ariaLabel": "authentication.authSelection.switchAuthType",
        "icon": <ArrowLeftRegular />,
        "key": "switch",
        "onClick": [Function],
        "text": "authentication.authSelection.switchAuthType",
      },
    ]
  }
/>
`;

exports[`AzureActiveDirectoryCommandBar matches snapshot when token is present 1`] = `
<CommandBarV9
  items={
    [
      {
        "ariaLabel": "authentication.azureActiveDirectory.command.logout",
        "icon": <SignOutRegular />,
        "key": "signout",
        "onClick": [Function],
        "text": "authentication.azureActiveDirectory.command.logout",
      },
      {
        "ariaLabel": "authentication.authSelection.switchAuthType",
        "icon": <ArrowLeftRegular />,
        "key": "switch",
        "onClick": [Function],
        "text": "authentication.authSelection.switchAuthType",
      },
    ]
  }
/>
`;
